# ReinaRender

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: Main.cpp  main.cpp  reina.hpp
src/core/: camera.hpp  intergrator.hpp  light.hpp  medium.hpp  ray.hpp  sampler.hpp  scene.hpp
src/utils/: config.hpp  float.hpp  math.hpp  vecmath.hpp
